# Mini-vMac-Aurora

./: .gitmodules  CMakeLists.txt  README.md  ru.erhoof.minivmac.desktop
rpm/: ru.erhoof.minivmac.spec
src/: config.h  gui_config.h
src/profiles/: MacII.h
